--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: [Project list]
-description: [List of active or maintained projects]
+title: Project list
+description: List of active or maintained projects
